main/JParser.py
# Generated from JParser.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class JParser ( Parser ):

    grammarFileName = "JParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'boolean'", "'break'", "'byte'", "'case'", 
                     "'char'", "'class'", "'continue'", "'default'", "'do'", 
                     "'double'", "'else'", "'final'", "'float'", "'for'", 
                     "'if'", "'instanceof'", "'int'", "'long'", "'new'", 
                     "'private'", "'protected'", "'public'", "'return'", 
                     "'short'", "'static'", "'switch'", "'this'", "'void'", 
                     "'while'", "'('", "')'", "'{'", "'}'", "'['", "']'", 
                     "';'", "','", "'.'", "'='", "'>'", "'<'", "'!'", "'~'", 
                     "'?'", "':'", "'=='", "'<='", "'>='", "'!='", "'&&'", 
                     "'||'", "'++'", "'--'", "'+'", "'-'", "'*'", "'/'", 
                     "'&'", "'|'", "'^'", "'%'", "'+='", "'-='", "'*='", 
                     "'/='", "'&='", "'|='", "'^='", "'%='", "'<<='", "'>>='", 
                     "'>>>='", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'null'" ]

    symbolicNames = [ "<INVALID>", "BOOLEAN", "BREAK", "BYTE", "CASE", "CHAR", 
                      "CLASS", "CONTINUE", "DEFAULT", "DO", "DOUBLE", "ELSE", 
                      "FINAL", "FLOAT", "FOR", "IF", "INSTANCEOF", "INT", 
                      "LONG", "NEW", "PRIVATE", "PROTECTED", "PUBLIC", "RETURN", 
                      "SHORT", "STATIC", "SWITCH", "THIS", "VOID", "WHILE", 
                      "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", 
                      "RBRACK", "SEMI", "COMMA", "DOT", "ASSIGN", "GT", 
                      "LT", "BANG", "TILDE", "QUESTION", "COLON", "EQUAL", 
                      "LE", "GE", "NOTEQUAL", "AND", "OR", "INC", "DEC", 
                      "ADD", "SUB", "MUL", "DIV", "BITAND", "BITOR", "CARET", 
                      "MOD", "ADD_ASSIGN", "SUB_ASSIGN", "MUL_ASSIGN", "DIV_ASSIGN", 
                      "AND_ASSIGN", "OR_ASSIGN", "XOR_ASSIGN", "MOD_ASSIGN", 
                      "LSHIFT_ASSIGN", "RSHIFT_ASSIGN", "URSHIFT_ASSIGN", 
                      "WS", "COMMENT", "LINE_COMMENT", "DECIMAL_LITERAL", 
                      "HEX_LITERAL", "OCT_LITERAL", "BINARY_LITERAL", "FLOAT_LITERAL", 
                      "HEX_FLOAT_LITERAL", "BOOL_LITERAL", "CHAR_LITERAL", 
                      "STRING_LITERAL", "TEXT_BLOCK", "NULL_LITERAL", "IDENTIFIER" ]

    RULE_compilationUnit = 0
    RULE_classDeclaration = 1
    RULE_identifier = 2
    RULE_classBody = 3
    RULE_classBodyDeclaration = 4
    RULE_modifier = 5
    RULE_classModifier = 6
    RULE_variableModifier = 7
    RULE_methodModifier = 8
    RULE_memberDeclaration = 9
    RULE_methodDeclaration = 10
    RULE_methodBody = 11
    RULE_constructorDeclaration = 12
    RULE_constructorBody = 13
    RULE_fieldDeclaration = 14
    RULE_variableDeclarators = 15
    RULE_variableDeclarator = 16
    RULE_variableDeclaratorId = 17
    RULE_variableInitializer = 18
    RULE_arrayInitializer = 19
    RULE_parameters = 20
    RULE_literal = 21
    RULE_integerLiteral = 22
    RULE_floatLiteral = 23
    RULE_block = 24
    RULE_blockStatement = 25
    RULE_localVariableDeclaration = 26
    RULE_localTypeDeclaration = 27
    RULE_statement = 28
    RULE_parExpression = 29
    RULE_switchBlockStatementGroup = 30
    RULE_switchLabel = 31
    RULE_expression = 32
    RULE_methodCall = 33
    RULE_innerCreator = 34
    RULE_classCreatorRest = 35
    RULE_creator = 36
    RULE_createdName = 37
    RULE_arrayCreatorRest = 38
    RULE_arguments = 39
    RULE_primary = 40
    RULE_type = 41
    RULE_classType = 42
    RULE_primitiveType = 43
    RULE_forControl = 44
    RULE_forInit = 45
    RULE_enhancedForControl = 46
    RULE_expressionList = 47

    ruleNames =  [ "compilationUnit", "classDeclaration", "identifier", 
                   "classBody", "classBodyDeclaration", "modifier", "classModifier", 
                   "variableModifier", "methodModifier", "memberDeclaration", 
                   "methodDeclaration", "methodBody", "constructorDeclaration", 
                   "constructorBody", "fieldDeclaration", "variableDeclarators", 
                   "variableDeclarator", "variableDeclaratorId", "variableInitializer", 
                   "arrayInitializer", "parameters", "literal", "integerLiteral", 
                   "floatLiteral", "block", "blockStatement", "localVariableDeclaration", 
                   "localTypeDeclaration", "statement", "parExpression", 
                   "switchBlockStatementGroup", "switchLabel", "expression", 
                   "methodCall", "innerCreator", "classCreatorRest", "creator", 
                   "createdName", "arrayCreatorRest", "arguments", "primary", 
                   "type", "classType", "primitiveType", "forControl", "forInit", 
                   "enhancedForControl", "expressionList" ]

    EOF = Token.EOF
    BOOLEAN=1
    BREAK=2
    BYTE=3
    CASE=4
    CHAR=5
    CLASS=6
    CONTINUE=7
    DEFAULT=8
    DO=9
    DOUBLE=10
    ELSE=11
    FINAL=12
    FLOAT=13
    FOR=14
    IF=15
    INSTANCEOF=16
    INT=17
    LONG=18
    NEW=19
    PRIVATE=20
    PROTECTED=21
    PUBLIC=22
    RETURN=23
    SHORT=24
    STATIC=25
    SWITCH=26
    THIS=27
    VOID=28
    WHILE=29
    LPAREN=30
    RPAREN=31
    LBRACE=32
    RBRACE=33
    LBRACK=34
    RBRACK=35
    SEMI=36
    COMMA=37
    DOT=38
    ASSIGN=39
    GT=40
    LT=41
    BANG=42
    TILDE=43
    QUESTION=44
    COLON=45
    EQUAL=46
    LE=47
    GE=48
    NOTEQUAL=49
    AND=50
    OR=51
    INC=52
    DEC=53
    ADD=54
    SUB=55
    MUL=56
    DIV=57
    BITAND=58
    BITOR=59
    CARET=60
    MOD=61
    ADD_ASSIGN=62
    SUB_ASSIGN=63
    MUL_ASSIGN=64
    DIV_ASSIGN=65
    AND_ASSIGN=66
    OR_ASSIGN=67
    XOR_ASSIGN=68
    MOD_ASSIGN=69
    LSHIFT_ASSIGN=70
    RSHIFT_ASSIGN=71
    URSHIFT_ASSIGN=72
    WS=73
    COMMENT=74
    LINE_COMMENT=75
    DECIMAL_LITERAL=76
    HEX_LITERAL=77
    OCT_LITERAL=78
    BINARY_LITERAL=79
    FLOAT_LITERAL=80
    HEX_FLOAT_LITERAL=81
    BOOL_LITERAL=82
    CHAR_LITERAL=83
    STRING_LITERAL=84
    TEXT_BLOCK=85
    NULL_LITERAL=86
    IDENTIFIER=87

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CompilationUnitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.modifier_ = None # ModifierContext

        def EOF(self):
            return self.getToken(JParser.EOF, 0)

        def classDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JParser.ClassDeclarationContext)
            else:
                return self.getTypedRuleContext(JParser.ClassDeclarationContext,i)


        def modifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JParser.ModifierContext)
            else:
                return self.getTypedRuleContext(JParser.ModifierContext,i)


        def getRuleIndex(self):
            return JParser.RULE_compilationUnit

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompilationUnit" ):
                return visitor.visitCompilationUnit(self)
            else:
                return visitor.visitChildren(self)




    def compilationUnit(self):

        localctx = JParser.CompilationUnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_compilationUnit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3f) == 0 and ((1 << _la) & 40898624) != 0:
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if ((_la) & ~0x3f) == 0 and ((1 << _la) & 40898560) != 0:
                    self.state = 96
                    localctx.modifier_ = self.modifier()


                self.state = 99
                self.classDeclaration()
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 105
            self.match(JParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.class_name = None # IdentifierContext

        def CLASS(self):
            return self.getToken(JParser.CLASS, 0)

        def classBody(self):
            return self.getTypedRuleContext(JParser.ClassBodyContext,0)


        def identifier(self):
            return self.getTypedRuleContext(JParser.IdentifierContext,0)


        def getRuleIndex(self):
            return JParser.RULE_classDeclaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDeclaration" ):
                return visitor.visitClassDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def classDeclaration(self):

        localctx = JParser.ClassDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(JParser.CLASS)
            self.state = 108
            localctx.class_name = self.identifier()
            self.state = 109
            self.classBody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(JParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return JParser.RULE_identifier

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifier" ):
                return visitor.visitIdentifier(self)
            else:
                return visitor.visitChildren(self)




    def identifier(self):

        localctx = JParser.IdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_identifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(JParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(JParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(JParser.RBRACE, 0)

        def classBodyDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JParser.ClassBodyDeclarationContext)
            else:
                return self.getTypedRuleContext(JParser.ClassBodyDeclarationContext,i)


        def getRuleIndex(self):
            return JParser.RULE_classBody

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassBody" ):
                return visitor.visitClassBody(self)
            else:
                return visitor.visitChildren(self)




    def classBody(self):

        localctx = JParser.ClassBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_classBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(JParser.LBRACE)
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3f) == 0 and ((1 << _la) & 73340957738) != 0 or _la==87:
                self.state = 114
                self.classBodyDeclaration()
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 120
            self.match(JParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassBodyDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMI(self):
            return self.getToken(JParser.SEMI, 0)

        def memberDeclaration(self):
            return self.getTypedRuleContext(JParser.MemberDeclarationContext,0)


        def modifier(self):
            return self.getTypedRuleContext(JParser.ModifierContext,0)


        def block(self):
            return self.getTypedRuleContext(JParser.BlockContext,0)


        def STATIC(self):
            return self.getToken(JParser.STATIC, 0)

        def getRuleIndex(self):
            return JParser.RULE_classBodyDeclaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassBodyDeclaration" ):
                return visitor.visitClassBodyDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def classBodyDeclaration(self):

        localctx = JParser.ClassBodyDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_classBodyDeclaration)
        self._la = 0 # Token type
        try:
            self.state = 131
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 122
                self.match(JParser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 124
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                if la_ == 1:
                    self.state = 123
                    self.modifier()


                self.state = 126
                self.memberDeclaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 128
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==25:
                    self.state = 127
                    self.match(JParser.STATIC)


                self.state = 130
                self.block()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PUBLIC(self):
            return self.getToken(JParser.PUBLIC, 0)

        def PROTECTED(self):
            return self.getToken(JParser.PROTECTED, 0)

        def PRIVATE(self):
            return self.getToken(JParser.PRIVATE, 0)

        def classModifier(self):
            return self.getTypedRuleContext(JParser.ClassModifierContext,0)


        def variableModifier(self):
            return self.getTypedRuleContext(JParser.VariableModifierContext,0)


        def methodModifier(self):
            return self.getTypedRuleContext(JParser.MethodModifierContext,0)


        def getRuleIndex(self):
            return JParser.RULE_modifier

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModifier" ):
                return visitor.visitModifier(self)
            else:
                return visitor.visitChildren(self)




    def modifier(self):

        localctx = JParser.ModifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_modifier)
        try:
            self.state = 139
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.match(JParser.PUBLIC)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 134
                self.match(JParser.PROTECTED)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 135
                self.match(JParser.PRIVATE)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 136
                self.classModifier()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 137
                self.variableModifier()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 138
                self.methodModifier()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassModifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STATIC(self):
            return self.getToken(JParser.STATIC, 0)

        def getRuleIndex(self):
            return JParser.RULE_classModifier

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassModifier" ):
                return visitor.visitClassModifier(self)
            else:
                return visitor.visitChildren(self)




    def classModifier(self):

        localctx = JParser.ClassModifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_classModifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(JParser.STATIC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableModifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FINAL(self):
            return self.getToken(JParser.FINAL, 0)

        def getRuleIndex(self):
            return JParser.RULE_variableModifier

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableModifier" ):
                return visitor.visitVariableModifier(self)
            else:
                return visitor.visitChildren(self)




    def variableModifier(self):

        localctx = JParser.VariableModifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_variableModifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.match(JParser.FINAL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodModifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STATIC(self):
            return self.getToken(JParser.STATIC, 0)

        def getRuleIndex(self):
            return JParser.RULE_methodModifier

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodModifier" ):
                return visitor.visitMethodModifier(self)
            else:
                return visitor.visitChildren(self)




    def methodModifier(self):

        localctx = JParser.MethodModifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_methodModifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(JParser.STATIC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fieldDeclaration(self):
            return self.getTypedRuleContext(JParser.FieldDeclarationContext,0)


        def methodDeclaration(self):
            return self.getTypedRuleContext(JParser.MethodDeclarationContext,0)


        def constructorDeclaration(self):
            return self.getTypedRuleContext(JParser.ConstructorDeclarationContext,0)


        def getRuleIndex(self):
            return JParser.RULE_memberDeclaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMemberDeclaration" ):
                return visitor.visitMemberDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def memberDeclaration(self):

        localctx = JParser.MemberDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_memberDeclaration)
        try:
            self.state = 150
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 147
                self.fieldDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 148
                self.methodDeclaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 149
                self.constructorDeclaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.method_declaration_type = None # TypeContext
            self.method_declaration_void = None # Token
            self.method_declaration_method_name = None # IdentifierContext

        def parameters(self):
            return self.getTypedRuleContext(JParser.ParametersContext,0)


        def methodBody(self):
            return self.getTypedRuleContext(JParser.MethodBodyContext,0)


        def identifier(self):
            return self.getTypedRuleContext(JParser.IdentifierContext,0)


        def STATIC(self):
            return self.getToken(JParser.STATIC, 0)

        def type_(self):
            return self.getTypedRuleContext(JParser.TypeContext,0)


        def VOID(self):
            return self.getToken(JParser.VOID, 0)

        def getRuleIndex(self):
            return JParser.RULE_methodDeclaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodDeclaration" ):
                return visitor.visitMethodDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def methodDeclaration(self):

        localctx = JParser.MethodDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_methodDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==25:
                self.state = 152
                self.match(JParser.STATIC)


            self.state = 157
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 3, 5, 10, 13, 17, 18, 24, 87]:
                self.state = 155
                localctx.method_declaration_type = self.type_()
                pass
            elif token in [28]:
                self.state = 156
                localctx.method_declaration_void = self.match(JParser.VOID)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 159
            localctx.method_declaration_method_name = self.identifier()
            self.state = 160
            self.parameters()
            self.state = 161
            self.methodBody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(JParser.BlockContext,0)


        def SEMI(self):
            return self.getToken(JParser.SEMI, 0)

        def getRuleIndex(self):
            return JParser.RULE_methodBody

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodBody" ):
                return visitor.visitMethodBody(self)
            else:
                return visitor.visitChildren(self)




    def methodBody(self):

        localctx = JParser.MethodBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_methodBody)
        try:
            self.state = 165
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [32]:
                self.enterOuterAlt(localctx, 1)
                self.state = 163
                self.block()
                pass
            elif token in [36]:
                self.enterOuterAlt(localctx, 2)
                self.state = 164
                self.match(JParser.SEMI)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstructorDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(JParser.IdentifierContext,0)


        def parameters(self):
            return self.getTypedRuleContext(JParser.ParametersContext,0)


        def constructorBody(self):
            return self.getTypedRuleContext(JParser.ConstructorBodyContext,0)


        def getRuleIndex(self):
            return JParser.RULE_constructorDeclaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstructorDeclaration" ):
                return visitor.visitConstructorDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def constructorDeclaration(self):

        localctx = JParser.ConstructorDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_constructorDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self.identifier()
            self.state = 168
            self.parameters()
            self.state = 169
            self.constructorBody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstructorBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(JParser.BlockContext,0)


        def SEMI(self):
            return self.getToken(JParser.SEMI, 0)

        def getRuleIndex(self):
            return JParser.RULE_constructorBody

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstructorBody" ):
                return visitor.visitConstructorBody(self)
            else:
                return visitor.visitChildren(self)




    def constructorBody(self):

        localctx = JParser.ConstructorBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_constructorBody)
        try:
            self.state = 173
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [32]:
                self.enterOuterAlt(localctx, 1)
                self.state = 171
                self.block()
                pass
            elif token in [36]:
                self.enterOuterAlt(localctx, 2)
                self.state = 172
                self.match(JParser.SEMI)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FieldDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'
